test/files/neg/t12326b.check
t12326b.scala:5: warning: Unused import
import scala.collection.mutable.{ListBuffer, Map, Set}
                                 ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
